--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-<div class="card">
-    <h2 class="card-header">card</h2>
-    <img class="card-img" src="" alt="">
-    <h3 class="">$3.99</h3>
+    <h1>Barcelona Players</h1>
+
+    <div class="container">
+
+        <div class="posts">
+            <h2 class="terstegen">Marc-Ander Ter Stegen</h2>
+            <img class="terstegenimg" src="mini_01-MARC-ANDRE_TER_STEGEN.webp" alt="">
+        </div>
+
+        <div class="posts">
+        
+        </div>
+
+        <div class="posts">
+        
     </div>
+</div>
 </body>
 </html>
