--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         </div>
 
         <div class="posts">
-        
+            <h2 class="cubarsi">Pau Cubarsi</h2>
+            <img class="cubarsiimg" src="p593110_t178_2024_1_001_000.png" alt="">
         </div>
 
         <div class="posts">
-        
+            <h2 class="araujo">Ronald Araujo</h2>
+            <img class="araujoimg" src="" alt="">
     </div>
 </div>
 </body>
