--- a/index.html
+++ b/index.html
@@ -11,19 +11,49 @@
     <div class="container">
 
         <div class="posts">
-            <h2 class="terstegen">Marc-Ander Ter Stegen</h2>
-            <img class="terstegenimg" src="mini_01-MARC-ANDRE_TER_STEGEN.webp" alt="">
+            <h2>Marc-Ander Ter Stegen</h2>
+            <img src="mini_01-MARC-ANDRE_TER_STEGEN.webp" alt="">
         </div>
 
         <div class="posts">
-            <h2 class="cubarsi">Pau Cubarsi</h2>
+            <h2>Pau Cubarsi</h2>
             <img class="cubarsiimg" src="p593110_t178_2024_1_001_000.png" alt="">
         </div>
 
         <div class="posts">
-            <h2 class="araujo">Ronald Araujo</h2>
-            <img class="araujoimg" src="" alt="">
-    </div>
+            <h2>Ronald Araujo</h2>
+            <img class="araujoimg" src="mini_04-RONALD_ARAUJO.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Gavi</h2>
+            <img class="gaviimg" src="mini_30-GAVI.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Ferran Torres</h2>
+            <img class="ferranimg" src="mini_11-FERRAN_TORRES.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Pedri</h2>
+            <img class="pedriimg" src="mini_08-PEDRI.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Lewandowski</h2>
+            <img class="lewandowskiimg" src="mini_09-ROBERT_LEWANDOWSKI.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Raphina</h2>
+            <img class="raphinaimg" src="mini_22-RAPHINHA.webp" alt="">
+        </div>
+
+        <div class="posts">
+            <h2>Lamine Yamal</h2>
+            <img class="lamineimg" src="p593109_t178_2024_1_001_000.png" alt="">
+        </div>
 </div>
 </body>
 </html>
