--- a/index.html
+++ b/index.html
@@ -127,6 +127,92 @@
           >
         </button>
       </div>
+        <div class="posts">
+          <h2>Marc-Ander Ter Stegen</h2>
+          <img src="mini_01-MARC-ANDRE_TER_STEGEN.webp" alt="" />
+          <p>#1</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/11072/marc-andre-ter-stegen"
+              >More Info</a
+            >
+          </button>
+        </div>
+  
+        <div class="posts">
+          <h2>Pau Cubarsi</h2>
+          <img class="cubarsiimg" src="p593110_t178_2024_1_001_000.png" alt="" />
+          <p>#2</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/129400/pau-cubarsi"
+              >More Info</a
+            >
+          </button>
+        </div>
+  
+        <div class="posts">
+          <h2>Ronald Araujo</h2>
+          <img class="araujoimg" src="mini_04-RONALD_ARAUJO.webp" alt="" />
+          <p>#4</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/66133/ronald-araujo"
+              >More Info</a
+            >
+          </button>
+        </div>
+  
+        <div class="posts">
+          <h2>Gavi</h2>
+          <img class="gaviimg" src="mini_30-GAVI.webp" alt="" />
+          <p>#6</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/116719/pablo-martin-paez-gavira"
+              >More Info</a
+            >
+          </button>
+        </div>
+  
+        <div class="posts">
+          <h2>Ferran Torres</h2>
+          <img class="ferranimg" src="mini_11-FERRAN_TORRES.webp" alt="" />
+          <p>#7</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/43098/ferran-torres"
+              >More Info</a
+            >
+          </button>
+        </div>
+        <div class="posts">
+          <h2>Pedri</h2>
+          <img class="pedriimg" src="mini_08-PEDRI.webp" alt="" />
+          <p>#8</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/70486/pedro-gonzalez-lopez"
+              >More Info</a
+            >
+          </button>
+        </div>
+  
+        <div class="posts">
+          <h2>Lewandowski</h2>
+          <img
+            class="lewandowskiimg"
+            src="mini_09-ROBERT_LEWANDOWSKI.webp"
+            alt=""
+          />
+          <p>#9</p>
+          <button>
+            <a
+              href="https://www.fcbarcelona.com/en/football/first-team/players/5109/robert-lewandowski"
+              >More Info</a
+            >
+          </button>
+        </div>
     </div>
   </body>
 </html>
